
  * Edit Sprite module
    - Fix the hashid/int discrepency for current animation and next animation.

  * Edit Configuration module
    - Move set, get, go_set_, go_get, _va, get_nbr_, execute and access function to compat
    - Add a setf, getf, childrenf, casesf, executef API with printf like pattern to replace them all.

  * Edit Misc module
    - Add a bunny_randomize function to randomize a memory chunk
    - Add a bunny_memswap function to swap memory chunk content
    - Add a bunny_shuffle function to shuffle a memory chunk

liblapin-dev (1.12) UNRELEASED; urgency=low

  * Edit the repository and build system:
    - Switch from a single file errors~ to a directory with errors and
      warnings associated to files.

  * General
    - All functions now set errno on error.
    - All functions now write error logs on stderr if activated, disabled by default.
    - All functions now write logs on stdout, if activated, disabled by default.
    - Remove log printing commanded by the DEBUG macro.
    - Use bunny_alloca instead of directly alloca and bring a bunny_freea for systems
      that does not support alloca.
    - Add a transparent ressource manager working behind most loading functions
      of the library, making copy on write (or copy on call to make_unique), meaning
      now structures of bunny library may only be handler to real data instead
      of being real datas. The purpose of this is to save memory without having you
      to change anything in your code.

  * Edit allocator module
    - Add bunny_allocator_reset to restart completly the allocator and invalidate
      all pointers.

  * Edit window module
    - Add bunny_vertical_sync function to enable or disable vsync.

  * Add a sound sprite module
    - Play subpart of a sound file to save memory, streaming it from your
      drive instead of filling your memory with t_bunny_effect.

  * Add error module
    - Bring the t_bunny_error type that complete errno error codes.